# drogue-cloud-testing

./: .gitignore  Cargo.toml  Gemfile  Makefile  README.md  TODO.md  _config.yml  index.md
.github/scripts/: collect_logs.sh
.github/workflows/: system-test.yaml
_posts/: .md  2021-09-15-test-run-0001.md  2021-09-15-test-run-0002.md  2021-09-16-test-run-1241436267.md  2021-09-16-test-run-1241745082.md  2021-09-16-test-run-1242153440.md  2021-09-16-test-run-1242375324.md  2021-09-17-test-run-1244614681.md  2021-09-17-test-run-1245702551.md  2021-09-20-test-run-1253334198.md  2021-09-20-test-run-1253972309.md  2021-09-21-test-run-1257602379.md  2021-09-28-test-run-1282459526.md  2021-10-04-test-run-1302369352.md  2021-10-11-test-run-1327731558.md  2021-10-14-test-run-1341076060.md  2021-10-14-test-run-1341458209.md  2021-10-15-test-run-1345907123.md  2021-10-18-test-run-1353344715.md  2021-10-19-test-run-1360094897.md  2021-10-21-test-run-1367337266.md  2021-10-21-test-run-1367900635.md  2021-10-22-test-run-1371167842.md  2021-10-22-test-run-1371327654.md  2021-10-22-test-run-1371781981.md  2021-10-22-test-run-1372018589.md  2021-10-25-test-run-1379785545.md  2021-10-25-test-run-1380168064.md  2021-10-25-test-run-1380531050.md  2021-10-25-test-run-1381004394.md  2021-10-26-test-run-1385674045.md  2021-10-26-test-run-1386000507.md  2021-10-26-test-run-1386017312.md  2021-10-26-test-run-1386418479.md  2021-10-28-test-run-1393687212.md  2021-11-01-test-run-1406733424.md  2021-11-02-test-run-1411906231.md  2021-11-02-test-run-1412104972.md  2021-11-02-test-run-1412538606.md  2021-11-02-test-run-1412895398.md  (+210 more)
hcloud/: cloud-init-fedora.yaml  cloud-init-ubuntu.yaml
src/: context.rs  main.rs
src/init/: access_token.rs  api_key.rs  config.rs  drg.rs  info.rs  login.rs  mod.rs  token.rs  url.rs  web.rs
src/registry/: mod.rs
src/resources/: apps.rs  devices.rs  mod.rs
src/tests/: mod.rs
src/tests/api/: mod.rs
src/tests/coap/: command.rs  mod.rs  telemetry.rs
src/tests/drg/: mod.rs
src/tests/http/: command.rs  mod.rs  telemetry.rs
src/tests/integration/: mod.rs
src/tests/mqtt/: command.rs  mod.rs  telemetry.rs
src/tests/registry/: api.rs  drg.rs  mod.rs
src/tests/websocket/: mod.rs  telemetry.rs
src/tools/: assert.rs  command.rs  http.rs  messages.rs  mod.rs  mqtt.rs  tls.rs  warmup.rs  web.rs
src/tools/coap/: helper.rs  mod.rs
src/tools/mqtt/: device.rs  mod.rs  receiver.rs  sender.rs
src/tools/mqtt/receiver/: mod.rs  paho.rs  rumqtt.rs  warmup.rs
src/tools/websocket/: mod.rs
