[package]
name = "drogue-cloud-tests"
version = "0.5.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.8"
anyhow = "1"

maplit = "1"

url = { version = "2", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rustls = "0.19"
pem = "0.8"

serde = "1"
serde_json = "1"

async-trait = "0.1"
test-context = "0.1"
rstest = "0.10"

async-std = "1"

futures = "0.3"

fantoccini = "0.17.5"

tempfile = "3"
base64 = "0.13"
uuid = { version = "0.8", features = ["v4"] }

tokio = { version = "1.7", features = ["full", "rt-multi-thread"] }

paho-mqtt = { version = "0.9", features = ["bundled"] }

coap = "0.11"
coap-lite = "0.5"

regex = "1.5"
serde_urlencoded = "0.7"

drogue-client = "0.8.0-alpha1"

[patch.crates-io]
#drogue-client = { path = "../drogue-client" }
drogue-client = { git = "https://github.com/drogue-iot/drogue-client", rev = "5ff15f91aab49c584af9fb244870c13fecd2c916"} # awaiting release
